 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-4676: Upgrade Hive to 1.2.1 (daijy)

PIG-4574: Eliminate identity vertex for order by and skewed join right after LOAD (rohini)

PIG-4365: TOP udf should implement Accumulator interface (eyal via rohini)

PIG-4570: Allow AvroStorage to use a class for the schema (pmazak via daijy)

PIG-4405: Adding 'map[]' support to mock/Storage (nielsbasjes via daijy)

PIG-4638: Allow TOMAP to accept dynamically sized input (nielsbasjes via daijy)

PIG-4639: Add better parser for Apache HTTPD access log (nielsbasjes via daijy)

BUG FIXES

PIG-4679: Performance degradation due to InputSizeReducerEstimator since PIG-3754 (daijy)

PIG-4315: MergeJoin or Split followed by order by gives NPE in Tez (rohini)

PIG-4654: Reduce tez memory.reserve-fraction and clear spillables for better memory utilization (rohini)

PIG-4628: Pig 0.14 job with order by fails in mapreduce mode with Oozie (knoguchi)

PIG-4651: Optimize NullablePartitionWritable serialization for skewed join (rohini)

PIG-4627: [Pig on Tez] Self join does not handle null values correctly (rohini)

PIG-4644: PORelationToExprProject.clone() is broken (erwaman via rohini)

PIG-4650: ant mvn-deploy target is broken (daijy)

PIG-4649: [Pig on Tez] Union followed by HCatStorer misses some data (rohini)

PIG-4636: Occurred spelled incorrectly in error message for Launcher and POMergeCogroup (stevenmz via daijy)

PIG-4624: Error on ORC empty file without schema (daijy)

PIG-3622: Allow casting bytearray fields to bytearray type (redisliu via daijy)

PIG-4618: When use tez as the engine , set pig.user.cache.enabled=true do not take effect (wisgood via rohini)
